# EGCVMamba

./: .gitignore  CITATION.cff  ConvBN.py  ConvBNSiLU.py  LICENSE  README.md  TRAINING_ZH.md  pyproject.toml  requirements.txt
Assets/: assets description
Component/: ConvBN.py  ConvBNSiLU.py  ECA.py  FFN.py  Layernorm.py  MBWTConv2D.py  SS2D.py  scalemodule.py
ImageClassification/: GFlops.py  csm_triton.py  csms6s.py  data.py  main.py  model.py  vmamba.py
Module/: AlphaBlock.py  BetaBlock.py  ChannelMixer.py  EVSSBlock.py  GammaBlock.py  STEM.py
SemanticSegmentation/: FPN.py  SSdata.py  SSmain.py  model.py  pretrained.py
configs/classification/: egcvmamba_base.yaml  egcvmamba_large.yaml  egcvmamba_small.yaml  egcvmamba_tiny.yaml
configs/segmentation/: ade20k_small.yaml  ade20k_tiny.yaml
egcvmamba/: __init__.py  data.py  engine.py  utils.py
egcvmamba/.ipynb_checkpoints/: engine-checkpoint.py
egcvmamba/models/: __init__.py  blocks.py  egcvmamba.py  layers.py  segmentation.py
egcvmamba/models/.ipynb_checkpoints/: egcvmamba-checkpoint.py
scripts/: train_ade20k.sh  train_imagenet.sh
tests/: test_model_shapes.py
tools/: evaluate_classification.py  export_onnx.py  profile_model.py  train_classification.py  train_segmentation.py
